--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tushaar Mehtaa</title>
+    <title>Tushaar Mehtaa - Personal Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -114,63 +114,63 @@
         <header>
             <h1>Tushaar Mehtaa</h1>
             <img id="profile-photo" src="https://raw.githubusercontent.com/tushaarmehtaa/tushaarmehtaa/b0bbf06c86c8ca7f440084e620aa191ea48f5021/IMG%208532%202.jpg" alt="Tushaar Mehtaa">
-            <p>Hello Hello, this is my little corner of the internet. <br> Here you can find things I've done, things I'm doing, things I want to do and things I'm really obsessed with.</p>
+            <p>hello hello, this is tushaar, and welcome to my corner of the internet.</p>
+            <p>here, you'll find almost everything about me—things i've done, things i'm doing, things i want to do, and things i'm really excited about.</p>
         </header>
 
         <section id="about">
-            <h2>About Me</h2>
+            <h2>about me</h2>
             <ul>
-                <li>I am a 23-year-old (yes, I turned 23 just <span id="days-since-birthday"></span> days back) writer & marketer living in Bangalore. </li>
-                <li>I've been lucky enough to work with some amazing folks since I started out, including <a href="https://x.com/AyushkWadhwa">Ayush Wadhwa</a>, <a href="https://x.com/paraschopra">Paras Chopra</a>, <a href="https://x.com/Saxenasaheb">Saumya Saxena</a>, and so many more founders I really admire.</li>
-                <li>I've done millions of impressions across platforms and content types, whether <a href="https://www.instagram.com/builders.central/">reels</a>, <a href="https://x.com/tushaarmehtaa/status/1765270035721822483">tweets</a>, or <a href="https://www.linkedin.com/posts/karthiksridharan1_startup-activity-7212686224094810112-fMZP?utm_source=share&utm_medium=member_desktop">posts</a>.</li>
-                <li>Currently, I am playing around with GenAI - have been working on a couple of ideas.</li>
-                <li>Also, I am learning to code (mostly with AI) - so that I can ship stuff independently and much faster.</li>
+                <li>i'm a 23-year-old self-taught writer and marketer living in bangalore. never really went to college, but i do have a bba degree for the records.</li>
+                <li>i started writing online over 3 years ago and have been fortunate enough to work with some exceptional founders like <a href="https://x.com/AyushkWadhwa">ayush wadhwa</a>, <a href="https://x.com/paraschopra">paras chopra</a>, <a href="https://x.com/Saxenasaheb">saumya saxena</a>, and many more.</li>
+                <li>usually, i focus on making sure whatever i write generates revenue, but in marketing, people often talk about impressions—so, speaking of numbers, i've achieved millions of impressions across platforms and content types, whether <a href="https://www.instagram.com/builders.central/">reels</a>, <a href="https://x.com/tushaarmehtaa/status/1765270035721822483">tweets</a>, or <a href="https://www.linkedin.com/posts/karthiksridharan1_startup-activity-7212686224094810112-fMZP?utm_source=share&utm_medium=member_desktop">posts</a>.</li>
+                <li>currently, i'm really excited, fascinated, and honestly feeling a bit dumb about generative ai and how it can help ship things faster, giving humans more time to do fulfilling work.</li>
             </ul>
         </section>
 
         <section id="projects">
-            <h2>Projects</h2>
+            <h2>projects</h2>
             <div class="project">
-                <h3><a href="https://jimbro.framer.ai/">JimBro</a></h3>
-                <p>Name sounds funny, but I'm trying to make it easier than ever to log workouts using voice and AI. </p>
+                <h3><a href="https://jimbro.framer.ai/">jimbro</a></h3>
+                <p>name sounds funny, but i'm trying to make it easier than ever to log workouts using voice and ai.</p>
             </div>
             <div class="project">
-                <h3>Internal tools-as-a-service</h3>
-                <p>Think dashboard, think smallest GPT wrappers that allow most mundane tasks to be handled by tech rather than humans, built for internal corporate use.</p>
+                <h3>internal tools-as-a-service</h3>
+                <p>think dashboard, think smallest gpt wrappers that allow most mundane tasks to be handled by technology rather than humans, building for internal corporate use.</p>
             </div>
             <div class="project">
-                <h3><a href="https://x.com/podcastdecoded_">Podcast Decoded</a></h3>
-                <p>Did this with my brother a while back - where we listened to podcasts and shared notes - so you don't have to.</p>
+                <h3><a href="https://x.com/podcastdecoded_">podcast decoded</a></h3>
+                <p>we listened to podcasts and shared notes - so you don't have to.</p>
             </div>
             <div class="project">
-                <h3><a href="https://x.com/FlowwMedia">Floww Media</a></h3>
-                <p>Did this with two of my brothers - to make thumbnails for YouTubers - got some clients from India, Korea and the States - couldn't keep up with a job.</p>
+                <h3><a href="https://x.com/FlowwMedia">floww media</a></h3>
+                <p>a services business to make thumbnails for youtubers - got some clients from india, korea, and the states - couldn't keep it going with a job.</p>
             </div>
         </section>
 
         <section id="writings">
-            <h2>Writings</h2>
+            <h2>writings</h2>
             <div class="writing">
-                <h3><a href="https://tushaarmehtaa.bearblog.dev/your-day-job/">Your Day Job is Useless</a></h3>
-                <p>"I'm just doing this to learn, then I'm going to start my own thing." <br> If I had a dollar for every time I heard that, I'd never need to work again.</p>
+                <h3><a href="https://tushaarmehtaa.bearblog.dev/your-day-job/">your day job is useless</a></h3>
+                <p>"i'm just doing this to learn, then i'm going to start my own thing."</p>
             </div>
             <div class="writing">
-                <h3><a href="https://tushaarmehtaa.bearblog.dev/making-great-things/">Make Laziness Enablers</a></h3>
-                <p>I'm obsessed with laziness right now. <br> Not my own (though my family might disagree). I'm talking about your laziness. The user's laziness.</p>
+                <h3><a href="https://tushaarmehtaa.bearblog.dev/making-great-things/">make laziness enablers</a></h3>
+                <p>i'm obsessed with laziness right now. not my own (though my family might disagree)...</p>
             </div>
             <div class="writing">
-                <h3><a href="https://tushaarmehtaa.bearblog.dev/people-on-twitter/">People on Twitter</a></h3>
-                <p>People on Twitter. They don't appreciate actionable advice. They don't value the small, daily steps they can take to reach their goals. <br> Why? Because that takes effort.</p>
+                <h3><a href="https://tushaarmehtaa.bearblog.dev/people-on-twitter/">people on twitter</a></h3>
+                <p>people on twitter. they don't appreciate actionable advice. they don't value the small, daily steps they can take to reach their goals...</p>
             </div>
             <div class="writing">
-                <h3><a href="https://tushaarmehtaa.bearblog.dev/specialization-is-overrated/">Specialization is overrated</a></h3>
-                <p>"Specialization is for insects." When I first read this quote by Naval 3 years back, it really resonated with me. And I thought, why not?</p>
+                <h3><a href="https://tushaarmehtaa.bearblog.dev/specialization-is-overrated/">specialization is overrated</a></h3>
+                <p>"specialization is for insects." when i first read this quote by naval 3 years back, it really resonated with me...</p>
             </div>
-            <p><a href="https://tushaarmehtaa.bearblog.dev/blog/">Read more here</a></p>
+            <p><a href="https://tushaarmehtaa.bearblog.dev/blog/">read more here</a></p>
         </section>
 
         <section id="connect">
-            <h2>Connect</h2>
+            <h2>connect</h2>
             <div class="connect-icons">
                 <a href="mailto:tusharmehta2001@icloud.com" title="Email">✉️</a>
                 <a href="https://x.com/tushaarmehtaa" title="Twitter">🐦</a>
