--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@ body.dark-theme #theme-toggle svg {
             <p>Feel free to reach out for collaborations or just a chat!</p>
         </div>
         <div class="social-links">
-            <a href="https://github.com/yourusername" title="GitHub">🐙</a>
-            <a href="https://twitter.com/yourusername" title="Twitter">🐦</a>
+            <a href="https://github.com/tushaarmehtaa" title="GitHub">🐙</a>
+            <a href="https://twitter.com/tushaarmehtaa" title="Twitter">🐦</a>
             <a href="mailto:tusharmehta2001@icloud.com" title="Email">✉️</a>
         </div>
         <p>© 2024 Tushaar Mehtaa. All rights reserved.</p>
